--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="./public/image/white bacg sangee.jpg">
+    <link rel="icon" type="image/jpg" href="../assets/image/sangee.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio-Sangee</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
